Install TexLive package inconsolata

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,8 @@ before_install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install llvm &&
     export PATH="/usr/local/opt/llvm/bin:$PATH" &&
     export LDFLAGS="-L/usr/local/opt/llvm/lib" &&
-    export CPPFLAGS="-I/usr/local/opt/llvm/include"; fi
+    export CPPFLAGS="-I/usr/local/opt/llvm/include" &&
+    tlmgr install inconsolata; fi
 
 r_packages:
   - covr
