--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: r
 cache: packages
+dist: xenial
 warnings_are_errors: true
 
 r:
@@ -19,8 +20,7 @@ before_install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install llvm &&
     export PATH="/usr/local/opt/llvm/bin:$PATH" &&
     export LDFLAGS="-L/usr/local/opt/llvm/lib" &&
-    export CPPFLAGS="-I/usr/local/opt/llvm/include" &&
-    tlmgr install inconsolata; fi
+    export CPPFLAGS="-I/usr/local/opt/llvm/include"; fi
 
 r_packages:
   - covr
