--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -41,7 +41,7 @@ RoxygenNote: 7.1.1
 Suggests:
     testthat,
     lintr
-License: AGPL-3
+License: MPL-2.0 | file LICENSE
 Encoding: UTF-8
 Copyright: This package includes sources from the LZ4 library owned by Yann Collet, sources of the ZSTD
     library owned by Facebook, Inc., sources of the libdivsufsort-lite library owned by Yuta Mori and
