Upgrade OSX image to xcode10

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,11 @@ cache: packages
 dist: bionic
 warnings_are_errors: false
 
+osx_image: xcode10
+
 r:
-  - oldrel
   - release
-  - devel
 os:
-  - linux
   - osx
 
 jobs:
@@ -19,7 +18,7 @@ jobs:
 before_install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install llvm &&
     export PATH="/usr/local/opt/llvm/bin:$PATH" &&
-    export LDFLAGS="-L/usr/local/opt/llvm/lib" &&
+    export LDFLAGS="-L/usr/local/opt/llvm/lib -Wl,-rpath,/usr/local/opt/llvm/lib" &&
     export CPPFLAGS="-I/usr/local/opt/llvm/include"; fi
 
 r_packages:
