Force llvm installation on Travis macOS

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,6 @@ cache: packages
 dist: bionic
 warnings_are_errors: false
 
-osx_image: xcode11
-
 r:
   - release
 os:
@@ -15,8 +13,11 @@ jobs:
   - r: devel
     os: osx
 
-brew_packages:
-  - llvm
+before_install:
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install --force llvm &&
+    export PATH="/usr/local/opt/llvm/bin:$PATH" &&
+    export LDFLAGS="-L/usr/local/opt/llvm/lib -Wl,-rpath,/usr/local/opt/llvm/lib" &&
+    export CPPFLAGS="-I/usr/local/opt/llvm/include"; fi
 
 r_packages:
   - covr
