--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ jobs:
 
 before_install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then  rm "/usr/local/bin/gfortran" &&
+    brew install postgis &&
     brew install llvm &&
     export PATH="/usr/local/opt/llvm/bin:$PATH" &&
     export LDFLAGS="-L/usr/local/opt/llvm/lib -Wl,-rpath,/usr/local/opt/llvm/lib" &&
