Ignore dependency installs

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,9 +14,7 @@ jobs:
     os: osx
 
 before_install:
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then  rm "/usr/local/bin/gfortran" &&
-    brew install postgis &&
-    brew install llvm &&
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install --ignore-dependencies llvm &&
     export PATH="/usr/local/opt/llvm/bin:$PATH" &&
     export LDFLAGS="-L/usr/local/opt/llvm/lib -Wl,-rpath,/usr/local/opt/llvm/lib" &&
     export CPPFLAGS="-I/usr/local/opt/llvm/include"; fi
