--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,18 @@
 language: r
 cache: packages
-dist: bionic
 warnings_are_errors: false
 
+dist: bionic
 osx_image: xcode11
 
 r:
+  - oldrel
   - release
+  - devel
+  
 os:
+  - linux
   - osx
-
-jobs:
-  exclude:
-  - r: devel
-    os: osx
 
 brew_packages:
   - llvm
