--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,12 +5,13 @@ Description: The 'fstlib' library provides multithreaded serialization of compre
     'fst' format. The 'fst' format allows for random access of stored data and compression with the 'LZ4' and 'ZSTD'
     compressors.
 Version: 0.9.6
-Date: 2020-08-12
+Date: 2020-08-27
 Authors@R:
     c(person(given = "Mark",
              family = "Klik",
              role = c("aut", "cre", "cph"),
-             email = "markklik@gmail.com"),
+             email = "markklik@gmail.com",
+             comment = "Mark Klik is author of the fstcore package and author and copyright holder of the bundled 'fstlib' code"),
       person(given = "Yuta",
              family = "Mori",
              role = c("ctb", "cph"),
@@ -46,5 +47,5 @@ Encoding: UTF-8
 Copyright: This package includes sources from the LZ4 library owned by Yann Collet, sources of the ZSTD
     library owned by Facebook, Inc., sources of the libdivsufsort-lite library owned by Yuta Mori and
     sources of the fstlib library owned by Mark Klik
-URL: https://fstpackage.github.io/fstcore
+URL: http://www.fstpackage.org/fstcore
 BugReports: https://github.com/fstpackage/fst/issues
