--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -7,10 +7,10 @@
 on:
   push:
     branches:
-      - master
+      - release
   pull_request:
     branches:
-      - master
+      - release
 
 name: R-CMD-check
 
