--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,5 +1,12 @@
 ^.*\.Rproj$
 ^\.Rproj\.user$
 ^\.github$
+^_pkgdown.yml$
 ^\.travis.yml$
+^appveyor.yml$
+^CONDUCT.md$
+^CONTRIBUTING.md$
+^cran-checklist.md$
+^cran-comments.md$
+^fstcore.png$
 ^revdep$
