--- a/.github/workflows/check-osx.yaml
+++ b/.github/workflows/check-osx.yaml
@@ -62,7 +62,7 @@ jobs:
 
       - name: Environmental variables and compiler settings
         if: always()
-        run:
+        run: |
           env
           clang --version
           clang++ --version
