Compile C code with clang++

--- a/.github/workflows/check-osx.yaml
+++ b/.github/workflows/check-osx.yaml
@@ -64,8 +64,8 @@ jobs:
         if: always()
         run: |
           env
-          clang --version
           clang++ --version
+          export CC=/usr/bin/clang++
         shell: bash
 
       - name: Check
