--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -21,13 +21,13 @@ jobs:
       fail-fast: false
       matrix:
         config:
-          - {os: macOS-latest,   r: 'release'}
+          - {os: macOS-latest,   r: 'release', installer: 'brew install lz4'}
           - {os: windows-2022,   r: 'devel'}
           - {os: windows-latest, r: '4.1'}
           - {os: windows-latest, r: '3.6'}
-          - {os: ubuntu-20.04,   r: 'devel', http-user-agent: 'release', installer: 'sudo apt-get -y liblz4-dev libzstd-dev libxxhash-dev'}
-          - {os: ubuntu-20.04,   r: 'release', installer: 'sudo apt-get -y liblz4-dev libzstd-dev libxxhash-dev'}
-          - {os: ubuntu-18.04,   r: 'oldrel-4', installer: 'sudo apt-get -y liblz4-dev libzstd-dev libxxhash-dev'}
+          - {os: ubuntu-20.04,   r: 'devel', http-user-agent: 'release', installer: 'sudo apt-get install liblz4-dev libzstd-dev libxxhash-dev'}
+          - {os: ubuntu-20.04,   r: 'release', installer: 'sudo apt-get install liblz4-dev libzstd-dev libxxhash-dev'}
+          - {os: ubuntu-18.04,   r: 'oldrel-4', installer: 'sudo apt-get install liblz4-dev libzstd-dev libxxhash-dev'}
 
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
