--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -21,7 +21,7 @@ jobs:
       fail-fast: false
       matrix:
         config:
-          - {os: macOS-latest,   r: 'release', installer: 'brew install lz4'}
+          - {os: macOS-latest,   r: 'release', installer: 'brew install lz4 zstd xxhash'}
           - {os: windows-2022,   r: 'devel'}
           - {os: windows-latest, r: '4.1'}
           - {os: windows-latest, r: '3.6'}
