--- a/src/Makevars.in
+++ b/src/Makevars.in
@@ -1,10 +1,25 @@
 
 PKG_CXXFLAGS = $(SHLIB_OPENMP_CXXFLAGS)
-PKG_CPPFLAGS = -I. -Ifstlib -Ifstlib/LZ4
+PKG_CPPFLAGS = -I. -Ifstlib -Ifstlib/LZ4 -Ifstlib/ZSTD/common \
+	-Ifstlib/ZSTD/decompress -Ifstlib/ZSTD/compress
 CXX_STD      = CXX11
-PKG_LIBS     = $(SHLIB_OPENMP_CXXFLAGS) ./libFRAME.a ./libCOMPRESSION.a @libs@
+PKG_LIBS     = $(SHLIB_OPENMP_CXXFLAGS) ./libFRAME.a ./libCOMPRESSION.a %locallibs% @libs@
 
 # libraries
+LIBLZ4  = fstlib/LZ4/lz4.o fstlib/LZ4/xxhash.o
+
+LIBZSTD = fstlib/ZSTD/common/entropy_common.o fstlib/ZSTD/common/error_private.o fstlib/ZSTD/common/fse_decompress.o \
+	fstlib/ZSTD/compress/fse_compress.o fstlib/ZSTD/compress/zstd_compress_literals.o \
+	fstlib/ZSTD/compress/zstd_compress_sequences.o fstlib/ZSTD/decompress/huf_decompress.o fstlib/ZSTD/compress/huf_compress.o \
+	fstlib/ZSTD/decompress/zstd_ddict.o fstlib/ZSTD/decompress/zstd_decompress.o fstlib/ZSTD/decompress/zstd_decompress_block.o \
+	fstlib/ZSTD/decompress/zstd_decompress.o fstlib/ZSTD/common/zstd_common.o fstlib/ZSTD/common/debug.o \
+	fstlib/ZSTD/compress/zstd_compress.o fstlib/ZSTD/dictBuilder/cover.o fstlib/ZSTD/dictBuilder/divsufsort.o \
+	fstlib/ZSTD/compress/zstd_fast.o fstlib/ZSTD/compress/zstd_lazy.o fstlib/ZSTD/compress/zstd_ldm.o \
+	fstlib/ZSTD/common/pool.o fstlib/ZSTD/compress/zstd_opt.o fstlib/ZSTD/dictBuilder/zdict.o \
+	fstlib/ZSTD/compress/zstd_double_fast.o fstlib/ZSTD/compress/hist.o fstlib/ZSTD/dictBuilder/fastcover.o \
+	fstlib/ZSTD/compress/zstd_compress_superblock.o fstlib/ZSTD/common/xxhash.o
+LIBCOMPRESSION  = fstlib/compression/compression.o fstlib/compression/compressor.o
+
 LIBCOMPRESSION  = fstlib/compression/compression.o fstlib/compression/compressor.o
 
 LIBFRAME = fstlib/interface/openmphelper.o fstlib/interface/fststore.o fstlib/logical/logical_v10.o \
@@ -14,6 +29,12 @@ LIBFRAME = fstlib/interface/openmphelper.o fstlib/interface/fststore.o fstlib/lo
 
 $(SHLIB): libCOMPRESSION.a libFRAME.a
 
+libLZ4.a: $(LIBLZ4)
+	$(AR) rcs libLZ4.a $(LIBLZ4)
+
+libZSTD.a: $(LIBZSTD)
+	$(AR) rcs libZSTD.a $(LIBZSTD)
+
 libCOMPRESSION.a: $(LIBCOMPRESSION)
 	$(AR) rcs libCOMPRESSION.a $(LIBCOMPRESSION)
 
@@ -21,4 +42,4 @@ libFRAME.a: $(LIBFRAME) libCOMPRESSION.a
 	$(AR) rcs libFRAME.a $(LIBFRAME)
 
 clean:
-	rm -f $(SHLIB) $(OBJECTS) $(LIBFRAME) $(LIBCOMPRESSION) libFRAME.a libCOMPRESSION.a
+	rm -f $(SHLIB) $(OBJECTS) $(LIBFRAME) $(LIBCOMPRESSION)
