--- a/src/Makevars.in
+++ b/src/Makevars.in
@@ -20,8 +20,6 @@ LIBZSTD = fstlib/ZSTD/common/entropy_common.o fstlib/ZSTD/common/error_private.o
 	fstlib/ZSTD/compress/zstd_compress_superblock.o fstlib/ZSTD/common/xxhash.o
 LIBCOMPRESSION  = fstlib/compression/compression.o fstlib/compression/compressor.o
 
-LIBCOMPRESSION  = fstlib/compression/compression.o fstlib/compression/compressor.o
-
 LIBFRAME = fstlib/interface/openmphelper.o fstlib/interface/fststore.o fstlib/logical/logical_v10.o \
 	fstlib/integer/integer_v8.o fstlib/byte/byte_v12.o fstlib/double/double_v9.o fstlib/character/character_v6.o \
 	fstlib/factor/factor_v7.o fstlib/blockstreamer/blockstreamer_v2.o fstlib/integer64/integer64_v11.o \
@@ -35,7 +33,7 @@ libLZ4.a: $(LIBLZ4)
 libZSTD.a: $(LIBZSTD)
 	$(AR) rcs libZSTD.a $(LIBZSTD)
 
-libCOMPRESSION.a: $(LIBCOMPRESSION)
+libCOMPRESSION.a: $(LIBCOMPRESSION) @locallibs@
 	$(AR) rcs libCOMPRESSION.a $(LIBCOMPRESSION)
 
 libFRAME.a: $(LIBFRAME) libCOMPRESSION.a
