--- a/src/Makevars.in
+++ b/src/Makevars.in
@@ -5,9 +5,7 @@ PKG_CPPFLAGS = -I. -Ifstlib -Ifstlib/LZ4 -Ifstlib/ZSTD -Ifstlib/ZSTD/common \
 PKG_LIBS     = $(SHLIB_OPENMP_CXXFLAGS) ./libFRAME.a ./libCOMPRESSION.a @locallibs@ @libs@
 
 # libraries
-LIBLZ4  = fstlib/LZ4/lz4.o fstlib/LZ4/xxhash.o
-
-LIBASSEMBLY = fstlib/ZSTD/decompress/huf_decompress_amd64.S
+LIBLZ4 = fstlib/LZ4/lz4.o fstlib/LZ4/xxhash.o
 
 LIBZSTD = fstlib/ZSTD/common/entropy_common.o fstlib/ZSTD/common/error_private.o fstlib/ZSTD/common/fse_decompress.o \
 	fstlib/ZSTD/compress/fse_compress.o fstlib/ZSTD/compress/zstd_compress_literals.o \
@@ -33,7 +31,7 @@ libLZ4.a: $(LIBLZ4)
 	$(AR) rcs libLZ4.a $(LIBLZ4)
 
 libZSTD.a: $(LIBZSTD)
-	$(AR) rcs libZSTD.a $(LIBZSTD) $(LIBASSEMBLY)
+	$(AR) rcs libZSTD.a $(LIBZSTD)
 
 libCOMPRESSION.a: $(LIBCOMPRESSION) @locallibs@
 	$(AR) rcs libCOMPRESSION.a $(LIBCOMPRESSION)
