--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -30,6 +30,7 @@ jobs:
           - {os: ubuntu-latest,  r: 'devel',    id: 'missing-libs', installer: 'sudo apt-get install libzstd-dev libxxhash-dev', http-user-agent: 'release'}
           - {os: ubuntu-latest,  r: 'release',  id: 'system-libs',  installer: 'sudo apt-get install liblz4-dev libzstd-dev libxxhash-dev'}
           - {os: ubuntu-20.04,   r: 'oldrel-4', id: 'system-libs',  installer: 'sudo apt-get install liblz4-dev libzstd-dev libxxhash-dev'}
+          - {os: ubuntu-20.04,   r: 'oldrel-4', id: 'bundled-libs', bundled: true}
 
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
