--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -23,6 +23,7 @@ jobs:
         config:
           - {os: macOS-latest,   r: 'release',  id: 'bundled-libs', bundled: true}
           - {os: macOS-latest,   r: 'release',  id: 'system-libs',  installer: 'brew install lz4 zstd xxhash'}
+          - {os: macos-11,       r: 'release',  id: 'bundled-libs', bundled: true}
           - {os: windows-2022,   r: 'devel',    id: 'bundled-libs'}
           - {os: windows-latest, r: '4.2',      id: 'bundled-libs'}
           - {os: windows-latest, r: '3.6',      id: 'bundled-libs'}
